httpserver/deploy/canary/httpserver-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winkyi-httpserver-v2
spec:
  selector:
    matchLabels:
      app: httpserver
  replicas: 1
  template:
    metadata:
      labels:
        app: httpserver
        version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9999"
    spec:
      terminationGracePeriodSeconds: 20  #grace period
      containers:
        - command:
            - httpserver
            - -v=4
            - -logtostderr
            - -configfile=/config/app.ini
          name: httpserver
          image: winkyi/httpserver:v1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
              name: app
            - containerPort: 8001
              name: pprof
          resources:
            limits:
              memory: "500Mi"
              cpu: "1"
            requests:
              memory: "200Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9999
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9999
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: httpserverconf
              mountPath: /config/
              readOnly: true
      volumes:
        -  name: httpserverconf
           configMap:
             name: cm-httpserver
